--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HugAtHome</title>
+  <title>@Home</title>
   <base href="/app">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
